<resources>
    <string name="app_name_release">MTG</string>
    <string name="app_name_debug">MTG debug</string>

    <string name="menu_search">Поиск</string>
    <string name="menu_more">Еще</string>
    <string name="menu_collection">Коллекция</string>
    <string name="menu_libraries">Колоды</string>
    <string name="menu_wish">Хочу!</string>
    <string name="menu_spoilers">Спойлеры</string>
    <string name="menu_gallery">Галлерея</string>
    <string name="menu_filter">Фильтр</string>
    <string name="menu_toggle">Сетка</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_watch">Отслеживание</string>
    <string name="menu_report">Отчет</string>
    <string name="menu_link">Связать</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_archive">Архив</string>
    <string name="menu_reload">Загрузить</string>

    <string name="action_cancel">Отменить</string>
    <string name="action_added">Добавлено</string>
    <string name="action_saved">Сохранено</string>
    <string name="action_restored">Восстановлено</string>
    <string name="action_add_to_library">Добавить в колоду…</string>
    <string name="action_make_backup">Сохранить</string>
    <string name="action_restore_backup">Восстановить</string>
    <string name="action_update">Обновить</string>
    <string name="action_copy_to_clip">Скопировано в буфер обмена</string>
    <string name="action_apply">Применить</string>
    <string name="action_seconds_side_not_found">Вторая сторона не найдена</string>
    <string name="action_network_error">Ошибка получения данных</string>
    <string name="action_to_archive">Отправлено в архив</string>
    <string name="action_from_archive">Убрано из архива</string>

    <string name="notify_update_complete">Всего обработано карт %d. Обновлено данных для %d карт.</string>
    <string name="notify_update_progress">Обработано карт %d из %d.</string>
    <string name="notify_update_complete_annotation">Обновление завершено</string>
    <string name="notify_update_progress_annotation">Обновление в процессе</string>
    <string name="notify_update_notification">Обновление началось</string>
    <string name="notify_convert_notification">Конвертирование началось</string>
    <string name="notify_convert_progress">Обработано сетов %d из %d.</string>

    <string name="rules">Правила</string>
    <string name="text">Текст</string>
    <string name="all">Всего</string>
    <string name="select">Выбрать</string>
    <string name="filters">Фильтры</string>
    <string name="filters_sets">Выбранные сеты</string>
    <string name="library">Название колоды</string>
    <string name="search">Поиск…</string>
    <string name="child">ID второй стороны</string>
    <string name="empty_search">Ничего не найдено</string>
    <string name="hint_search">По умолчанию поиск производится по названию на русском языке. \n\n
        Для поиска на английском, перед запросом нужно указать префикс \"e\" (также на английском). \n\n
        Для поиска по номеру и сету используется префикс \"n\" и формат \"код_сета номер\" (например, \"n akh 43\").\n\n
        Для поиска по названию и сету используется префикс \"s\" и формат \"код_сета название_на_английском\" (например, \"s akh mighty leap\").</string>

    <string name="backup_text">Сохранить базу данных карт на носителе</string>
    <string name="backup_auto_text">Сохранять базу данных карт на носителе автоматически</string>
    <string name="update_library_cards_price">Обновлять цены карт в колодах</string>
    <string name="show_set_with_archive">Показывать архивные сеты</string>
    <string name="restore_text">Восстановить базу данных карт с носителя. Все существующие данные будут удалены.</string>
    <string name="update_watched_prices">Обновить цены</string>
    <string name="update_valutes">Обновить курс валюты</string>
    <string name="update_collection">Конвертировать коллекцию в новый формат</string>
    <string name="price_viol_check">Следить за ценой</string>
    <string name="price_viol_top">выше</string>
    <string name="price_viol_bottom">ниже</string>
    <string name="price_usd">%s$</string>
    <string name="price_rub">%s₽</string>
    <string name="price_max_rub">Max: %s₽</string>
    <string name="price_min_rub">Min: %s₽</string>
    <string name="library_card_count">Карт в колоде: %s</string>
    <string name="library_price_usd">Стоимость колоды: %s$</string>
    <string name="library_price_rub">Стоимость колоды: %s₽</string>

    <string name="tag_parent">parent</string>
    <string name="tag_id">id</string>
</resources>
