<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_collection"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_collection" />

    <item
        android:id="@+id/nav_sets"
        android:icon="@drawable/ic_view_list"
        android:title="@string/menu_spoilers" />

    <item
        android:id="@+id/nav_wish_list"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/menu_wish" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_magnify"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_dots_vertical"
        android:title="@string/menu_more" />

</menu>
