<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainBlock"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundMain"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_cards"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/menu_libraries" />

            <TextView
                android:id="@+id/report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_report"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/menu_report" />

            <TextView
                android:id="@+id/watch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_eye"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/menu_watch" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_settings"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/menu_settings" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
